// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coreEngine should remove element with RenderElementMethod 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "image_element": true,
        "placeholder_element": true,
      },
      "element": Layout {
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "Layout",
        "items": [
          Element {
            "id": "image_element",
            "interfaceName": "Image",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "Placeholder",
            Symbol(immer-draftable): true,
          },
        ],
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "image_element": Node {
      "element": Image {
        "id": "image_element",
        "interfaceName": "Image",
        "src": "https://google.com",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "element": Placeholder {
        "id": "placeholder_element",
        "interfaceName": "Placeholder",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
  },
}
`;

exports[`coreEngine should support list replacement with same id 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "placeholder_element": true,
        "text_element_1": true,
        "text_element_2": true,
      },
      "element": Layout {
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "Layout",
        "items": [
          Element {
            "id": "text_element_1",
            "interfaceName": "Text",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "text_element_2",
            "interfaceName": "Text",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "Placeholder",
            Symbol(immer-draftable): true,
          },
        ],
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "element": Placeholder {
        "id": "placeholder_element",
        "interfaceName": "Placeholder",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "text_element_1": Node {
      "element": Text {
        "id": "text_element_1",
        "interfaceName": "Text",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "text_element_2": Node {
      "element": Text {
        "id": "text_element_2",
        "interfaceName": "Text",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
  },
}
`;

exports[`coreEngine should support nested element update with same id 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "image_element_1": true,
        "nested_layout_element": true,
      },
      "element": Layout {
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "Layout",
        "items": [
          Element {
            "id": "image_element_1",
            "interfaceName": "Image",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "nested_layout_element",
            "interfaceName": "Layout",
            Symbol(immer-draftable): true,
          },
        ],
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "image_element_1": Node {
      "element": Image {
        "id": "image_element_1",
        "interfaceName": "Image",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "image_element_2": Node {
      "element": Image {
        "id": "image_element_2",
        "interfaceName": "Image",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "nested_layout_element",
      Symbol(immer-draftable): true,
    },
    "nested_layout_element": Node {
      "childs": {
        "image_element_2": true,
        "placeholder_element": true,
      },
      "element": Layout {
        "id": "nested_layout_element",
        "interfaceName": "Layout",
        "items": [
          Element {
            "id": "image_element_2",
            "interfaceName": "Image",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "Placeholder",
            Symbol(immer-draftable): true,
          },
        ],
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "element": Placeholder {
        "id": "placeholder_element",
        "interfaceName": "Placeholder",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "nested_layout_element",
      Symbol(immer-draftable): true,
    },
  },
}
`;

exports[`coreEngine should support override element with RenderElementMethod 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "image_element": true,
        "placeholder_element": true,
      },
      "element": Layout {
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "Layout",
        "items": [
          Element {
            "id": "image_element",
            "interfaceName": "Image",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "Layout",
            Symbol(immer-draftable): true,
          },
        ],
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "button_element": Node {
      "element": Button {
        "id": "button_element",
        "interfaceName": "Button",
        "size": "lg",
        "style": "default",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "placeholder_element",
      Symbol(immer-draftable): true,
    },
    "image_element": Node {
      "element": Image {
        "id": "image_element",
        "interfaceName": "Image",
        "src": "https://google.com",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "childs": {
        "button_element": true,
        "text_element": true,
      },
      "element": Layout {
        "id": "placeholder_element",
        "interfaceName": "Layout",
        "items": [
          Element {
            "id": "text_element",
            "interfaceName": "Text",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "button_element",
            "interfaceName": "Button",
            Symbol(immer-draftable): true,
          },
        ],
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "text_element": Node {
      "element": Text {
        "id": "text_element",
        "interfaceName": "Text",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "placeholder_element",
      Symbol(immer-draftable): true,
    },
  },
}
`;

exports[`coreEngine should update the store correctly 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "button_element": true,
        "image_element": true,
        "placeholder_element": true,
        "stateholder_element": true,
        "text_element": true,
      },
      "element": Layout {
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "Layout",
        "items": [
          Element {
            "id": "text_element",
            "interfaceName": "Text",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "image_element",
            "interfaceName": "Image",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "button_element",
            "interfaceName": "Button",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "Placeholder",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "stateholder_element",
            "interfaceName": "InputState",
            Symbol(immer-draftable): true,
          },
        ],
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "button_element": Node {
      "element": Button {
        "id": "button_element",
        "interfaceName": "Button",
        "size": "lg",
        "style": "default",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "image_element": Node {
      "element": Image {
        "id": "image_element",
        "interfaceName": "Image",
        "src": "https://google.com",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "element": Placeholder {
        "id": "placeholder_element",
        "interfaceName": "Placeholder",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "stateholder_element": Node {
      "element": InputState {
        "id": "stateholder_element",
        "interfaceName": "InputState",
        "value": "string_data",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "text_element": Node {
      "element": Text {
        "id": "text_element",
        "interfaceName": "Text",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
  },
}
`;
